--- a/year-project/index.html
+++ b/year-project/index.html
@@ -1,23 +1,24 @@
 <html>
-<head>
-    <script src="familytree.js"></script>
-    <title>FamTreeTesting</title>
-</head>
+    <head>
+        <meta charset="utf-8"/>
+        <title>FamTreeTesting</title>
+        <script src = "familytree.js"></script>
+    </head>
+    <body>
+        <div style="width:100%; height:700px;" id="tree"></div>
 
-
-<body>
-<div style="width:100%; height:700px;" id="tree"></div>
-<script>
-    let family = new FamilyTree(document.getElementById("tree"), {
-        nodeBinding: {
-            field_0: "name"
-        },
-        nodes: [
-            { id: 1, pids: [2], name: "Amber McKenzie", gender: "female" },
-                { id: 2, pids: [1], name: "Ava Field", gender: "male" },
-                { id: 3, mid: 1, fid: 2, name: "Peter Stevens", gender: "male" }  
-        ]
-    });
-</script> 
-</body>
+        <script>
+            let family = new FamilyTree(document.getElementById("tree"), {
+                nodeBinding: {
+                    field_0: "name"
+                },
+                nodes: [
+                    { id: 1, pids: [2], name: "Amber McKenzie", gender: "female" },
+                        { id: 2, pids: [1], name: "Ava Field", gender: "male" },
+                        { id: 3, mid: 1, fid: 2, name: "Peter Stevens", gender: "male" }  
+                ]
+            });
+        </script> 
+         
+    </body>
 </html>
