--- a/musicLib.html
+++ b/musicLib.html
@@ -17,7 +17,15 @@
             Odessa
         </button>
         <div class="content">
-            <p>Open a PDF file <a href = "Odessa.pdf" target = "_blank">example</a></p>
+            <p>PDF file: <a href = "Odessa.pdf" target = "_blank">example</a></p>
+            <iframe width="420" height="315"src="https://www.youtube.com/embed/ApNR2am2HAE"></iframe>
+        </div>
+        <button type="button" class="collapsible">
+            Colors of the Wind
+        </button>
+        <div class="content">
+            <p>PDF file: <a href = "Colors of the Wind.pdf" target = "_blank">example</a></p>
+            <iframe width="420" height="315"src="https://www.youtube.com/embed/V86SczKEslo"></iframe>
         </div>
     </div>
 
