--- a/musicLib.html
+++ b/musicLib.html
@@ -17,15 +17,19 @@
             Odessa
         </button>
         <div class="content">
-            <p>PDF file: <a href = "Odessa.pdf" target = "_blank">example</a></p>
             <iframe width="420" height="315"src="https://www.youtube.com/embed/ApNR2am2HAE"></iframe>
+            <div class = rightSide>
+                <p class = title>Odessa by Matthew Lorick</p>
+                <p class = date>Started learning 5.28.24</p>
+                <p class = pdf><a href = "Odessa.pdf" target = "_blank">PDF File</a></p>
+            </div>
         </div>
         <button type="button" class="collapsible">
             Colors of the Wind
         </button>
         <div class="content">
-            <p>PDF file: <a href = "Colors of the Wind.pdf" target = "_blank">example</a></p>
             <iframe width="420" height="315"src="https://www.youtube.com/embed/V86SczKEslo"></iframe>
+            <p>PDF file: <a href = "Colors of the Wind.pdf" target = "_blank">example</a></p>
         </div>
     </div>
 
